@@ -1,7 +1,0 @@
-import unittest
-
-class TestPlaceholder(unittest.TestCase):
-    def test_addition(self):
-        result = 1 + 2
-        self.assertEqual(result, 3)
-
